Updated debugging